IST-23: Authentication implemented + password hashing && unitTests